# firebase-cpp-sdk

./: CMakeLists.txt  gradle.properties  local.properties  shell.nix
.github/workflows/: desktop.yml  integration_tests.yml
admob/: build.gradle
admob/admob_resources/: build.gradle
admob/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
admob/integration_test/gradle/wrapper/: gradle-wrapper.properties
analytics/: build.gradle
analytics/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
app/: CMakeLists.txt  build.gradle
app/app_resources/: build.gradle
app/google_api_resources/: build.gradle
app/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
app/invites_resources/: build.gradle
app/rest/tests/: request_json_test.cc
app/test_resources/: build.gradle
app/tests/: CMakeLists.txt
auth/: build.gradle
auth/auth_resources/: build.gradle
auth/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
auth/src/desktop/: auth_desktop.cc
cmake/: binary_to_array.cmake  external_rules.cmake
database/: build.gradle
database/database_resources/: build.gradle
database/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
dynamic_links/: build.gradle
dynamic_links/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
firestore/: CMakeLists.txt  build.gradle
firestore/ExtDbSyncApp/: CMakeLists.txt  ExtDbSyncApp.cc
firestore/LifeOfAQuery/: CMakeLists.txt  main.cc
firestore/firestore_resources/: build.gradle
firestore/integration_test/: AndroidManifest.xml  CMakeLists.txt  UnityIssue1083.cc  build.gradle  gradle.properties
firestore/integration_test/gradle/wrapper/: gradle-wrapper.properties
firestore/integration_test/src/: document_change_test.cc  firebase_testing_global_environment.cc  firebase_testing_global_environment.h  firestore_integration_test.cc  firestore_integration_test.h  firestore_test.cc  integration_test.cc
firestore/integration_test/src/android/: firestore_integration_test_android.cc  firestore_integration_test_android.h  firestore_integration_test_android_test.cc
firestore/integration_test/src/util/: assert.h  autoid.cc  autoid.h  event_accumulator.h  (+10 more)
firestore/integration_test_internal/: AndroidManifest.xml  CMakeLists.txt  build.gradle  local.properties
firestore/integration_test_internal/integration_test.xcodeproj/: project.pbxproj
firestore/integration_test_internal/src/: document_change_test.cc  future2_test.cc  listener_registration_test.cc
firestore/src/android/: cpp_pointer_android.cc  cpp_pointer_android.h  firestore_android.cc
firestore/src/common/: future2.cc  future2.h  future2_internal.h
functions/: build.gradle
functions/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
installations/: build.gradle
installations/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
messaging/: AndroidManifest.xml  build.gradle
messaging/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
messaging/messaging_java/: build.gradle
messaging/samples/: AndroidManifest.xml
nix/: android-dev-env.nix  pinned-nixpkgs.nix  xcodeenv.nix
release_build_files/: CMakeLists.txt
remote_config/: build.gradle
remote_config/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
scripts/: sanitizer_setup.py
scripts/gha/: build_desktop.py
storage/: build.gradle
storage/integration_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle
storage/storage_resources/: build.gradle
testing/: build.gradle
testing/test_framework/src/: firebase_test_framework.cc
(+16 files in other folders)
